# xalienfs

./: DEPENDENCIES  Makefile.am  README.md  alien-installer  bootstrap.sh  cleanup  config.h.in  configure.ac  configure_alien  make_alien
base/: Makefile.am  debugmacros.h
base/CODEC/: Makefile.am
base/ShmAuth/: Makefile.am
base/cwccrypt/: Makefile.am  spc_cwc.h
base/cwccrypt/gaes/: Makefile.am  aesaux.cpp  aesgav.cpp
client/: Makefile.am
client/clients/: Makefile.am  gbbox.cxx
client/clients/scripts/: alien_Shell  alien_cp
client/gclientlib/: Makefile.am  gapi_file_operations.cxx  gapi_job_operations.cxx  gapi_stat.cxx  gclient.cxx
server/: Makefile.am  XrdxAlienFs.cc  XrdxAlienFs.hh  XrdxAlienWorker.cc
server/C2Perl/: C2PERL.c  Makefile.am
